# LIMGEN

./: CMakeLists.txt  README.md  solusion.md  概念一览.md  论文思路.md
HDL/: Bitweaving.hdl  CarryLookaheadBlock.vhd  DSP.vhd  FIR_filter.vhd  RCA.vhd  RCA23.vhd  TEA.vhd  TEA23.vhd  arithmetic_encoder.vhd  arithmetic_encoder23.vhd  des.vhd  huffman.vhd  image_bin.vhd  image_bin23.vhd  mean_filter.vhd  mean_filter23.vhd  sample.vhd  test.vhd
LogicPro/: .desSample.bc.baiduyun.uploading.cfg  .testgraph.cpp.baiduyun.uploading.cfg  .vector_sum.ll.baiduyun.uploading.cfg
LogicPro/CDFG/: .e_expansion_function.vhd.baiduyun.uploading.cfg
Lut-lib/: lutlib.txt
TriLogic/: Func_main  Func_main.cpp  arr_size.cpp  array_node.cpp  build.cpp  cap_array.cpp  control_step.cpp  data_read.cpp  database_lut.txt  decide_array.cpp  do_logic.cpp  dse.cpp  dse.h  find_input.cpp  logic_func.cpp  logic_func.h  lut-lib  magic-lib  mainfunc.cpp  mainfunc.h  num_node_position.cpp  only_lut.cpp  only_magic.cpp  only_sa.cpp  op_row_need.cpp  out_degree.cpp  parameter.cpp  parameter.h  pre_array_list.cpp  sa-lib  time.cpp  time_energy.cpp  topoSort.cpp  wb_table.cpp  write_in.cpp  逻辑函数设计.md
TriLogic/layout/: layout.py  output.json
TriLogic/onlyArc/: only_lut.cpp  only_magic.cpp  only_sa.cpp
TriLogic/output/: Func_main
abc-master/example/: blif_gen.py  dse.cpp  lut_cell.lib  ma_cell.lib  n4.ps  rca2.blif  rca2.ps  rca2.v  sa_cell.lib  命令
abc-master/example/ISCAS85/: lut_num.py  mul.txt
abc-master/example/ISCAS89/: iscas.txt  lut_num.py  s38584_change_dff.v
abc-master/example/add/: add.txt  add16.v  add2.v  add32.v  add4.v  add64.v  add8.v  lut_num.py
abc-master/example/comparator/: comparator.txt  comparator16_bigger.v  comparator16_equal.v  comparator16_less.v  synth.v  (+26 more)
demo/: .VHDL_lex.l.baiduyun.uploading.cfg  .example4.baiduyun.uploading.cfg  .lex.yy.o.baiduyun.uploading.cfg  .main.h.baiduyun.uploading.cfg  .main.o.baiduyun.uploading.cfg  .testvhdl.vhd.baiduyun.uploading.cfg  .y.tab.h.baiduyun.uploading.cfg  .y.tab.o.baiduyun.uploading.cfg
hdlAst/: .CarryLookaheadBlock.vhd.baiduyun.uploading.cfg  .README.md.baiduyun.uploading.cfg  CdfgGen.py  HDLtestbench.md  RCA.json  RCA23.json  TEA.json  TEA23.json  arithmetic_encoder.json  arithmetic_encoder23.json  des.json  hdlast.json  hdlast2.json  image_bin.json  image_bin23.json  mean_filter.json  mean_filter23.json  test.json  test.py  verilog2json.py
hdlAst/HDL/: AES.v  test.vhd  testvhdl.vhd
hdlAst/TriLogic/: Func_main  Func_main.cpp  logic_func.cpp  logic_func.h
hdlAst/hdlAst/: .sample.vhd.baiduyun.uploading.cfg  Synthesis.code-workspace
(+55 files in other folders)
